--- a/Christmas Countdown.html
+++ b/Christmas Countdown.html
@@ -6,6 +6,8 @@ Christmas = new Date("December 25, 2022");
 
 msPerDay = 24 * 60 * 60 * 1000 ;
 
+sPerDay = 24 * 60 * 60 * 1000 * 60;
+
 timeLeft = (Christmas.getTime() - today.getTime());
 
 e_daysLeft = timeLeft / msPerDay;
@@ -16,9 +18,12 @@ e_hrsLeft = (e_daysLeft - daysLeft)*24;
 
 hrsLeft = Math.floor(e_hrsLeft);
 
-minsLeft = Math.floor((e_hrsLeft - hrsLeft)*60);
+e_minsLeft = ((e_hrsLeft - hrsLeft) * 60);
 
-document.write("There are only<BR> <H4>" + daysLeft + " days " + hrsLeft +" hours and " + minsLeft + " minutes left </H4> Until Christmas 2022<P>");
+minsLeft = Math.floor(e_minsLeft);
+
+secsLeft = Math.floor((e_minsLeft - minsLeft) * 60);
+
+document.write("There are only<BR> <H4>" + daysLeft + " days " + hrsLeft +" hours  " + minsLeft + " minutes and " + secsLeft + " seconds left </H4> Until Christmas 2022<P>");
 
 </script>
-
